# gpu-cluster-benchmarking

./: .dockerignore  .env_example  .gitignore  .gitmodules  Dockerfile  Dockerfile.serving  LICENSE  README.md  benchmark_plan.md  litellm_config.yaml  pyproject.toml  run_pod_cloud_plan.md
configs/: models.yaml  models.yaml.backup-6gpu
docker/: Dockerfile.vllm-sglang-llama
docs/: README.md  benchmark-architecture.md  benchmark-guide.md  benchmark.md  build.md  config.md  docker.md  download-models.md  params.md  run.md  serving-frameworks-params.md  setup.md
results/: gpu_monitor_20260612_044759.csv
results/20260611_103234_benchmark/llamacpp_run/run-2/: concurrent_1.tsv  concurrent_16.tsv  concurrent_4.tsv  concurrent_8.tsv  single_user.tsv
results/20260611_103234_benchmark/vllm_run/run-1/: p0_smoke_conc1.json  p0_smoke_conc4.json  p1_light_conc1.json  p1_light_conc128.json  p1_light_conc32.json  p1_light_conc64.json  p2_medium_conc1.json  p2_medium_conc16.json  p2_medium_conc32.json  p2_medium_conc64.json  p3_heavy_conc1.json  p3_heavy_conc16.json  p3_heavy_conc4.json  p3_heavy_conc8.json
results/20260611_103234_benchmark/vllm_run/run-3/: p0_smoke_conc1.json  p0_smoke_conc4.json  p1_light_conc1.json  p1_light_conc32.json
results/20260612_024841_benchmark/vllm_run/run-1/: p0_smoke_conc1.json
results/20260612_031351_benchmark/vllm_run/run-3/: FAILED
results/20260612_033647_benchmark/llamacpp_run/run-2/: concurrent_1.tsv  concurrent_16.tsv  concurrent_4.tsv  concurrent_8.tsv  single_user.tsv
results/20260612_034955_benchmark/: 20260612_034955_report.tsv
results/20260612_034955_benchmark/llamacpp_run/run-2/: concurrent_1.tsv  concurrent_16.tsv  concurrent_4.tsv  single_user.tsv
results/20260612_034955_benchmark/llamacpp_run/run-4/: concurrent_1.tsv  concurrent_16.tsv  concurrent_8.tsv
results/20260612_034955_benchmark/llamacpp_run/run-5/: concurrent_1.tsv  concurrent_4.tsv  concurrent_8.tsv  single_user.tsv
results/20260612_034955_benchmark/llamacpp_run/run-7/: concurrent_4.tsv  concurrent_8.tsv  single_user.tsv
results/20260612_034955_benchmark/vllm_run/run-1/: p1_light_conc1.json  p1_light_conc32.json  p2_medium_conc1.json  p2_medium_conc16.json  p3_heavy_conc1.json  p3_heavy_conc4.json  p3_heavy_conc8.json
results/20260612_034955_benchmark/vllm_run/run-3/: p0_smoke_conc1.json  p1_light_conc1.json  p1_light_conc128.json  p2_medium_conc1.json  p2_medium_conc32.json  p3_heavy_conc1.json  p3_heavy_conc4.json  p3_heavy_conc8.json
results/20260612_044049_benchmark/vllm_run/run-1/: FAILED
results/20260612_044336_benchmark/: 20260612_044336_report.tsv
results/20260612_044336_benchmark/llamacpp_run/run-4/: stress_summary.tsv
results/20260612_044336_benchmark/llamacpp_run/run-7/: stress_summary.tsv
results/20260612_044336_benchmark/vllm_run/run-1/: stress_conc1000.json  stress_conc1200.json  stress_conc1300.json  (+7 more)
results/benchmark-miss7/: 20260612_034955_summary.csv
results/benchmark-miss7-2/: 20260612_054916_report.tsv  20260612_054916_summary.csv
results/stress/: 20260612_044336_summary.csv
scripts/: bench-models.sh  benchmark-all.sh  build-llamacpp.sh  download-models.py  gen-litellm-config.py  init-bare-machine.sh  litellm-semantic-cache.py  monitor-gpu.sh  parse-results.py  parse_bench.py  prepare-dataset.sh  report.py  run-all-benchmarks.sh  run-embedding-server.sh  run-pipeline.sh  start-all-tmux.sh  stop-all.sh  test-all.sh  visualize_cross_sweep.py
scripts/benchmark/: _embed_params.sh  bench-litellm-async.py  bench-litellm-locust.py  bench-litellm.sh  bench-llamacpp-stress.sh  bench-llamacpp.sh  bench-sglang.sh  bench-vllm-stress.sh  bench-vllm.sh  bench.sh  find_best_np_llama.sh  llamacpp_bench.sh  sglang_bench.sh  vllm_bench.sh
scripts/docker/: docker-bench.sh  start.sh
scripts/run/: run-embedding-server.sh  run-llamacpp-turbo.sh  run-llamacpp.sh  run-proxy.sh  run-sglang.sh  run-vllm.sh  write_params.sh
scripts/test/: test-llm.sh  test-proxy.sh
src/caching/: litellm-semantic-cache.py
tests/: test_gen_litellm_config.py  test_write_params.py
(+102 files in other folders)
