[project]
name = "gpu-cluster-benchmarking"
version = "0.1.0"
description = "LLM Self-Hosted Benchmark & Deployment — 6× NVIDIA A40 · vLLM · llama.cpp · SGLang"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
common = [
    "huggingface-hub",
    "aiohttp",
    "pandas",
    "numpy",
    "tqdm",
    "transformers",
    "prometheus-client",
    "psutil",
    "gputil",
    "redis",
]

vllm = [
    "vllm",
]

sglang = [
    "sglang",
]

benchmark = [
    "locust",
    "llama-benchy",
    "aiohttp",
    "pandas",
    "numpy",
    "tqdm",
    "transformers",
]

litellm = [
    "litellm[proxy]>=1.40.0",
    "redis",
    "redisvl",
]

monitoring = [
    "prometheus-client",
    "psutil",
    "gputil",
]

all = [
    { include-group = "common" },
    { include-group = "benchmark" },
    { include-group = "litellm" },
    { include-group = "monitoring" },
]


[tool.uv]
default-groups = ["common"]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
conflicts = [
    [
        { group = "vllm" },
        { group = "sglang" },
    ],
]
extra-build-dependencies = { vllm = ["setuptools", "torch", "ninja", "packaging"], sglang = ["setuptools", "torch"] }


[tool.uv.sources]
vllm = { path = "third_party/vllm", editable = true }
sglang = { path = "third_party/sglang/python", editable = true }