[project]
name = "gpu-cluster-benchmarking"
version = "0.1.0"
description = "LLM Self-Hosted Benchmark & Deployment — 6× NVIDIA A40 · vLLM · llama.cpp · SGLang"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
common = [
    "huggingface-hub",
    "pyyaml",
    "aiohttp",
    "pandas",
    "numpy",
    "tqdm",
    "transformers",
    "prometheus-client",
    "psutil",
    "gputil",
    "redis",
    "requests",
    "datasets>=5.0.0",
    "pyarrow>=24.0.0",
]

vllm = [
    "vllm",
]

sglang = [
    "sglang",
]

benchmark = [
    "locust",
    "llama-benchy",
    "aiohttp",
    "pandas",
    "numpy",
    "tqdm",
    "transformers",
    "matplotlib>=3.11.0",
]

litellm = [
    "litellm[proxy]>=1.40.0",
    "redis",
    "redisvl",
]

monitoring = [
    "prometheus-client",
    "psutil",
    "gputil",
]

all = [
    { include-group = "common" },
    { include-group = "benchmark" },
    { include-group = "litellm" },
    { include-group = "monitoring" },
]

dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]


[tool.uv]
default-groups = ["common"]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
conflicts = [
    [
        { group = "vllm" },
        { group = "sglang" },
    ],
]
extra-build-dependencies = { vllm = ["setuptools", "setuptools_rust", "setuptools_scm", "torch", "ninja", "packaging"], sglang = ["setuptools", "torch"] }



